<resources>
    <string name="app_name">ImageUtil</string>

    <string name="grayscale">灰度处理</string>
    <string name="splash_text_title">图片增强APP</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="copyright">版权所有 © 2020 – 2021 YourName</string>

    <string name="app_perimision_prompt">请打开所需的相关权限，否则您无法正常使用本应用</string>
    <string name="dia_error">错误提示</string>
    <string name="dia_choose_img_title">选取图片</string>
    <string name="dia_choose_img_photos">系统相册</string>
    <string name="dia_choose_img_camera">相机拍照</string>
    <string name="add_image_prompt">点击添加图片</string>
    <string name="clarity">清晰度</string>
    <string name="contrast_ratio">对比度</string>
    <string name="saturation">饱和度</string>
    <string name="save_image">保存图片</string>
    <string name="saving_image">正在保存图片…</string>
    <string name="saved">已保存到图库“%1$s”</string>
    <string name="img_is_null">请先选择图片</string>
    <string name="loading_text">正在加载…</string>
    <string name="handing">正在处理</string>
    <string name="reduction">还原</string>
    <string name="adaptive">自适应增强</string>

    <string name="yes">确定</string>
    <string name="cancel">取消</string>

    <string name="i_crop">裁剪</string>
    <string name="i_splice">拼接</string>
    <string name="i_split">分割</string>
    <string name="i_enhance">增强</string>
    <string name="i_prune">编辑</string>
    <string name="i_evaluation">评图</string>
    <string name="img_source">原图</string>
    <string name="img_source_param">原图参数</string>
    <string name="img_enhance_param">增强参数</string>
    <string name="img_handle_param">正在计算增强后的各项数据</string>
    <string name="img_splice">合成图片</string>
    <string name="img_splice_action">正在合成图片，请耐心等待…</string>
    <string name="img_splice_error">无法拼接图片：%1$s</string>
    <string name="img_splice_error_only_one">请选择两张以上的图片进行拼接</string>
    <string name="img_splice_error_not_rectangle">图片必须是横向或纵向排列才能进行拼接</string>
    <string name="img_splice_ing">已经有一个合成图片任务正在进行，请耐心等待…</string>
    <string name="img_crop_2">2张</string>
    <string name="img_crop_3">3张</string>
    <string name="img_crop_4">4张</string>
    <string name="img_crop_6">6张</string>
    <string name="img_crop_8">8张</string>
    <string name="img_crop_9">9张</string>
    <string name="img_crop_12">12张</string>
    <string name="img_crop_15">15张</string>
    <string name="img_crop_16">16张</string>
    <string name="saving_imgs_prompt">正在保存（%1$d/%2$d）</string>
    <string name="share_text">分享图片</string>
    <string name="share_title">请选择应用</string>
    <string name="crop_is_null">请先裁剪图片</string>
    <string name="param_error">参数错误，无法裁剪</string>
    <string name="crop_result_title">裁剪结果展示</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>