<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    >
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_prompt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dia_error"
        android:textSize="@dimen/dialog_title"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="center"
        android:maxLines="1"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/tv_prompt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_content"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_prompt_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/yes"
            android:textSize="@dimen/dialog_yes_cancel"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/white_line_border"
            />
        <TextView
            android:id="@+id/tv_prompt_space"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            />
        <TextView
            android:id="@+id/tv_prompt_cancel"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/cancel"
            android:textSize="@dimen/dialog_yes_cancel"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/white_line_border"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        />
</LinearLayout>