<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.IEnhanceFragment"
    android:background="@drawable/splash_bg"
    android:id="@+id/fragment_i_enhance"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:id="@+id/flt_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lyt_controller"
            >
            <ImageView
                android:id="@+id/img_source"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:id="@+id/lyt_add_image_prompt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:id="@+id/img_add_image_prompt"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/add_icon"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_add_image_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image_prompt"
                    android:textSize="@dimen/add_image_prompt"
                    android:textColor="@color/add_image_prompt"
                    android:gravity="center"
                    />
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/lyt_controller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flt_image"
            app:layout_constraintBottom_toTopOf="@id/lyt_bottom"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tv_contrast"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/contrast_ratio"
                    android:gravity="center"
                    android:textSize="@dimen/image_param_edit"
                    android:textColor="@color/add_image_prompt"
                    />
                <com.bysj.imageutil.ui.components.RegulatorView
                    android:id="@+id/rgl_contrast"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tv_clarity"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clarity"
                    android:gravity="center"
                    android:textSize="@dimen/image_param_edit"
                    android:textColor="@color/add_image_prompt"
                    />
                <com.bysj.imageutil.ui.components.RegulatorView
                    android:id="@+id/rgl_clarity"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/tv_saturation"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/saturation"
                    android:gravity="center"
                    android:textSize="@dimen/image_param_edit"
                    android:textColor="@color/add_image_prompt"
                    />
                <com.bysj.imageutil.ui.components.RegulatorView
                    android:id="@+id/rgl_saturation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_adaptive"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/adaptive"
            android:textColor="@color/white"
            android:textSize="@dimen/save_image"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/confirm_bg"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lyt_bottom"
            app:layout_constraintTop_toBottomOf="@id/lyt_controller"
            />
        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/lyt_bottom"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_adaptive"
            >
            <TextView
                android:id="@+id/tv_save"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/save_image"
                android:textSize="@dimen/save_image"
                android:textColor="@color/white"
                android:background="@drawable/confirm_bg"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tv_reduction"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/reduction"
                android:textSize="@dimen/save_image"
                android:textColor="@color/white"
                android:background="@drawable/confirm_bg"
                android:gravity="center"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/share_text"
            android:textColor="@color/white"
            android:textSize="@dimen/save_image"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/confirm_bg"
            android:gravity="center"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lyt_bottom"
            app:layout_constraintTop_toBottomOf="@id/lyt_controller"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>